LayoutTests:

Reviewed by Hyatt.

        - test for http://bugs.webkit.org/show_bug.cgi?id=13537

        * fast/canvas/drawImage-with-invalid-args.html: Changed to a dumpAsText test.
        Added logging and a negative-size test.
        * fast/canvas/drawImage-with-invalid-args-expected.txt: Updated.

        * fast/canvas/drawImage-with-invalid-args-expected.checksum: Removed.
        * fast/canvas/drawImage-with-invalid-args-expected.png: Removed.

WebCore:

        Reviewed by Hyatt.

        - fix http://bugs.webkit.org/show_bug.cgi?id=13537
          Canvex example starts rendering strangely after a while

        * html/CanvasRenderingContext2D.cpp: (WebCore::CanvasRenderingContext2D::drawImage):
        Don't raise an exception if the source or destination rectangle is empty.



Canonical link: https://commits.webkit.org/17761@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@21280 268f45cc-cd09-0410-ab3c-d52691b4dbfc